fixed navigation width on mobile devices

--- a/angular/src/app/profile/profile.component.css
+++ b/angular/src/app/profile/profile.component.css
@@ -49,6 +49,10 @@
     border-bottom: none;
     min-width: 100px;
   }
+
+  .navigation {
+    max-width: 768px;
+  }
 }
 
 @media screen and (max-width: 740px) {
